Dec 15 2002  2.7.1  Added netmask-based client access control
                    Fixed saved ip loading
Dec 14 2002  2.7.1  Added client-controlled WEP decryption keys
                    Fixed ERROR protocol handling in tcpclient
Dec 13 2002  2.7.1  Added ERROR protocol handling to tcpclient
Dec 11 2002  2.7.1  Merged more hopper patches from Anders Gustafsson
                    Fixed tcpserver client line order
Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                     bugs with fuzzy encryption mode
                    Added (broken) WEP decoding.  Right now this is just a 
                     bit-blender, I'm not sure it's going to give you ANYTHING
                     useful and it's not user-controllable yet.
                    Fixed WEP decoding, at least on the tests so far.  See the
                     'wepkey' config file option.  This is NOT for wep 
                     cracking - this is for decoding traffic on networks with
                     a known key (ie, monitoring stationary networks)
                    Fixed string extraction from decoded packets
                    Updated configure to look for ethereal 0.9.8
                    Minor fix to kismet_hopper (Anders Gustafsson)
                    Fixed WSP100 capture source flagging all packets as FCS
                     errors.
                    Fixed signed error w/ datasize on defective WEP packets
Dec 05 2002  2.7.1  Fixed wsp100 cygwin header
                    Started adding viha support.  VIHA SUPPORT DOES NOT WORK
                     CURRENTLY.
Dec 03 2002  2.7.1  Fixed kismet_monitor and kismet_unmonitor to work with the
                     new source definitions.
Dec 02 2002  2.7.1  Tweaked how frontend handles group naming to be faster
                     and to handle changing SSID's gracefully.
                    Changed configfile parser to allow multiple options of the
                     same type.