@@ -1,3 +1,6 @@
+Dec 16 2002  2.7.1  Added error handling for client access control 'network'
+                     addresses which aren't valid network addresses (ie,
+                     10.0.0.1/24 is not valid.)
 Dec 15 2002  2.7.1  Added netmask-based client access control
                     Fixed saved ip loading
 Dec 14 2002  2.7.1  Added client-controlled WEP decryption keys
